Add DataStream Model

--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -8,5 +8,10 @@
     <ItemGroup>
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="Reflection\ObjectTree\Mapping" />
+    </ItemGroup>
   
 </Project>
