--- a/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
+++ b/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="ConsoleAppFramework" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Meadow\Meadow.csproj" />
+  </ItemGroup>
+
 </Project>
