--- a/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
+++ b/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
@@ -6,14 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ConsoleAppFramework" Version="4.1.0" />
-        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.3.0-1.final" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="ConsoleAppFramework" Version="4.1.0"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.3.0-1.final"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Meadow\Meadow.csproj" />
+        <ProjectReference Include="..\Meadow\Meadow.csproj"/>
     </ItemGroup>
 
     <!-- Dotnet Tool Specific settings -->
@@ -25,4 +25,11 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
+
+    <ItemGroup>
+        <Reference Include="Acidmanic.Utilities.Reflection, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+            <HintPath>..\..\Reflections.netcore\Acidmanic.Utilities.Reflection\bin\Debug\netstandard2.1\Acidmanic.Utilities.Reflection.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+    
 </Project>
