--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -7,13 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-    </ItemGroup>
-
-
-    <ItemGroup>
-      <Reference Include="Acidmanic.Utilities.Reflection, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-        <HintPath>..\..\Reflections.netcore\Acidmanic.Utilities.Reflection\bin\Debug\netstandard2.1\Acidmanic.Utilities.Reflection.dll</HintPath>
-      </Reference>
+        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.0-b3" />
     </ItemGroup>
 
 
