--- a/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
+++ b/Meadow.Tools.Assistant/Meadow.Tools.Assistant.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.0-b6" />
         <PackageReference Include="ConsoleAppFramework" Version="4.1.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
@@ -26,10 +27,10 @@
     </PropertyGroup>
 
 
-    <ItemGroup>
-        <Reference Include="Acidmanic.Utilities.Reflection, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\Reflections.netcore\Acidmanic.Utilities.Reflection\bin\Debug\netstandard2.1\Acidmanic.Utilities.Reflection.dll</HintPath>
-        </Reference>
-    </ItemGroup>
+<!--    <ItemGroup>-->
+<!--        <Reference Include="Acidmanic.Utilities.Reflection, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--            <HintPath>..\..\Reflections.netcore\Acidmanic.Utilities.Reflection\bin\Debug\netstandard2.1\Acidmanic.Utilities.Reflection.dll</HintPath>-->
+<!--        </Reference>-->
+<!--    </ItemGroup>-->
     
 </Project>
