--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.0-b6" />
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     </ItemGroup>
 
@@ -24,6 +25,11 @@
     </ItemGroup>
 
 
+    <ItemGroup>
+        <Content Include="BinaryResources\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 <!--    <ItemGroup>-->
 <!--        <Reference Include="Acidmanic.Utilities.Reflection, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">-->
 <!--            <HintPath>..\..\Reflections.netcore\Acidmanic.Utilities.Reflection\bin\Debug\netstandard2.1\Acidmanic.Utilities.Reflection.dll</HintPath>-->
