--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Meadow\Meadow.csproj" />
         <ProjectReference Include="..\Meadow.Tools.Assistant\Meadow.Tools.Assistant.csproj" />
+        <ProjectReference Include="..\Meadow.SQLite\Meadow.SQLite.csproj" />
     </ItemGroup>
 
     <ItemGroup>
