--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
+        <PackageReference Include="MySql.Data" Version="8.0.29" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     </ItemGroup>
 
