Update MySql Example

--- a/Example.MySql/Example.MySql.csproj
+++ b/Example.MySql/Example.MySql.csproj
@@ -6,17 +6,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Scripts\0000-initialize.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\0001-seed-data.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\0002-add-cruds.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\0003-1toN-address.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Scripts\*.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
