--- a/Example.SqlServer/Example.SqlServer.csproj
+++ b/Example.SqlServer/Example.SqlServer.csproj
@@ -17,6 +17,10 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
