--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.0" />
         <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
