--- a/Meadow.Postgre/Meadow.Postgre.csproj
+++ b/Meadow.Postgre/Meadow.Postgre.csproj
@@ -7,5 +7,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+  
+  
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="7.0.0-rc.1" />
+  </ItemGroup>
 
 </Project>
