Update Logger package, Fix Logging issues in engine.BuildUp()

--- a/Example.MySql/Example.MySql.csproj
+++ b/Example.MySql/Example.MySql.csproj
@@ -11,6 +11,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
