--- a/Meadow.Postgre/Meadow.Postgre.csproj
+++ b/Meadow.Postgre/Meadow.Postgre.csproj
@@ -8,9 +8,40 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   
-  
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="7.0.0-rc.1" />
+  </ItemGroup>
+
+
+  <PropertyGroup>
+    <!-- NuGet -->
+    <Id>Meadow.Postgre</Id>
+    <PackageId>Meadow.Postgre</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Mani Moayedi</Authors>
+    <Company>Acidmanic</Company>
+    <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
+    <Description>Meadow Postgre Adapter</Description>
+    <Summary>This package allows to use meadow on top of Postgre Sql database</Summary>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/Acidmanic/Meadow</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/Acidmanic/Meadow</PackageProjectUrl>
+    <Title>MEADOW - Managed and Enhanced ADO Wrapper - Postgre Adapter</Title>
+
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../Graphics/MeadowIcon.png">
+      <Pack>true</Pack>
+      <PackagePath>Graphics/MeadowIcon.png</PackagePath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="../LICENSE.txt">
+      <Pack>true</Pack>
+      <PackagePath>LICENSE.txt</PackagePath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
