--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -9,7 +9,7 @@
         <PackageReference Include="Acidmanic.Utilities" Version="1.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.2" />
+        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.5" />
     </ItemGroup>
 
 
@@ -17,7 +17,7 @@
         <!-- NuGet -->
         <Id>Meadow.Framework</Id>
         <PackageId>Meadow.Framework</PackageId>
-        <Version>1.2.3-b</Version>
+        <Version>1.2.3-b2</Version>
         <Authors>Mani Moayedi</Authors>
         <Company>Acidmanic</Company>
         <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
