--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -17,7 +17,7 @@
         <!-- NuGet -->
         <Id>Meadow.Framework</Id>
         <PackageId>Meadow.Framework</PackageId>
-        <Version>1.2.3-b2</Version>
+        <Version>1.2.3</Version>
         <Authors>Mani Moayedi</Authors>
         <Company>Acidmanic</Company>
         <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
