--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -9,7 +9,7 @@
         <PackageReference Include="Acidmanic.Utilities" Version="1.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.5" />
+        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b01" />
     </ItemGroup>
 
 
