--- a/Example.Async.SqlServer/Example.Async.SqlServer.csproj
+++ b/Example.Async.SqlServer/Example.Async.SqlServer.csproj
@@ -24,6 +24,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Example.SqlServer</RootNamespace>
   </PropertyGroup>
 
 </Project>
