--- a/Meadow.SqlServer/Meadow.SqlServer.csproj
+++ b/Meadow.SqlServer/Meadow.SqlServer.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CorePluralizer" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
   </ItemGroup>
   
