--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -51,5 +51,9 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Reflection\Conventions" />
+    </ItemGroup>
+
 
 </Project>
