--- a/Meadow.MySql/Meadow.MySql.csproj
+++ b/Meadow.MySql/Meadow.MySql.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Meadow.Scaffolding\Meadow.Scaffolding.csproj" />
     <ProjectReference Include="..\Meadow\Meadow.csproj" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
   </ItemGroup>
