--- a/Meadow.SQLite/Meadow.SQLite.csproj
+++ b/Meadow.SQLite/Meadow.SQLite.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Meadow.Scaffolding\Meadow.Scaffolding.csproj" />
     <ProjectReference Include="..\Meadow\Meadow.csproj" />
 
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
