--- a/Meadow.SqlServer/Meadow.SqlServer.csproj
+++ b/Meadow.SqlServer/Meadow.SqlServer.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Meadow.Scaffolding\Meadow.Scaffolding.csproj" />
     <ProjectReference Include="..\Meadow\Meadow.csproj" />
   </ItemGroup>
 
