--- a/Meadow.SQLite/Meadow.SQLite.csproj
+++ b/Meadow.SQLite/Meadow.SQLite.csproj
@@ -15,7 +15,7 @@
     <!-- NuGet -->
     <Id>Meadow.SQLite</Id>
     <PackageId>Meadow.SQLite</PackageId>
-    <Version>1.2.0</Version>
+    <Version>1.2.0-b01</Version>
     <Authors>Mani Moayedi</Authors>
     <Company>Acidmanic</Company>
     <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
