--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Acidmanic.Utilities" Version="1.0.5" />
         <PackageReference Include="CorePluralizer" Version="1.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
         <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b06" />
@@ -45,12 +46,5 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-        <HintPath>..\..\..\.nuget\packages\microsoft.extensions.logging.abstractions\6.0.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
 
 </Project>
