--- a/Meadow.SQLite/Meadow.SQLite.csproj
+++ b/Meadow.SQLite/Meadow.SQLite.csproj
@@ -1,45 +1,51 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\Meadow\Meadow.csproj" />
+    <ItemGroup>
+        <ProjectReference Include="..\Meadow\Meadow.csproj"/>
 
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
-  </ItemGroup>
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2"/>
+    </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.1</TargetFramework>
+    </PropertyGroup>
 
 
-  <PropertyGroup>
-    <!-- NuGet -->
-    <Id>Meadow.SQLite</Id>
-    <PackageId>Meadow.SQLite</PackageId>
-    <Version>1.3.0-b03</Version>
-    <Authors>Mani Moayedi</Authors>
-    <Company>Acidmanic</Company>
-    <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
-    <Description>Meadow SQLite Adapter</Description>
-    <Summary>This package allows to use meadow on top of SQLite database</Summary>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <RepositoryUrl>https://github.com/Acidmanic/Meadow</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/Acidmanic/Meadow</PackageProjectUrl>
-    <Title>MEADOW - Managed and Enhanced ADO Wrapper - SQLite Adapter</Title>
+    <PropertyGroup>
+        <!-- NuGet -->
+        <Id>Meadow.SQLite</Id>
+        <PackageId>Meadow.SQLite</PackageId>
+        <Version>1.3.0-b03</Version>
+        <Authors>Mani Moayedi</Authors>
+        <Company>Acidmanic</Company>
+        <PackageIcon>Graphics/MeadowIcon.png</PackageIcon>
+        <Description>Meadow SQLite Adapter</Description>
+        <Summary>This package allows to use meadow on top of SQLite database</Summary>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <RepositoryUrl>https://github.com/Acidmanic/Meadow</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageProjectUrl>https://github.com/Acidmanic/Meadow</PackageProjectUrl>
+        <Title>MEADOW - Managed and Enhanced ADO Wrapper - SQLite Adapter</Title>
+        <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    </PropertyGroup>
 
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="../Graphics/MeadowIcon.png">
-      <Pack>true</Pack>
-      <PackagePath>Graphics/MeadowIcon.png</PackagePath>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="../LICENSE.txt">
-      <Pack>true</Pack>
-      <PackagePath>LICENSE.txt</PackagePath>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="../Graphics/MeadowIcon.png">
+            <Pack>true</Pack>
+            <PackagePath>Graphics/MeadowIcon.png</PackagePath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Include="../LICENSE.txt">
+            <Pack>true</Pack>
+            <PackagePath>LICENSE.txt</PackagePath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <Content Include="../Readme.md">
+            <Pack>true</Pack>
+            <Link>Readme.md</Link>
+            <PackagePath>/</PackagePath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
