--- a/Example.SqlServer/Example.SqlServer.csproj
+++ b/Example.SqlServer/Example.SqlServer.csproj
@@ -14,6 +14,7 @@
 
 
     <ItemGroup>
+        <ProjectReference Include="..\Examples.Common\Examples.Common.csproj" />
         <ProjectReference Include="..\Meadow.SqlServer\Meadow.SqlServer.csproj" />
         <ProjectReference Include="..\Meadow\Meadow.csproj" />
     </ItemGroup>
