Update Meadow.SqlServer to support Filtering Macroes

--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -34,6 +34,9 @@
         <Content Include="SqLiteScripts\**">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Content Include="SqlServerScripts\**">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 
