--- a/Example.Postgre/Example.Postgre.csproj
+++ b/Example.Postgre/Example.Postgre.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Examples.Common\Examples.Common.csproj" />
     <ProjectReference Include="..\Meadow\Meadow.csproj" />
     <ProjectReference Include="..\Meadow.Postgre\Meadow.Postgre.csproj" />
   </ItemGroup>
