--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -37,6 +37,9 @@
         <Content Include="SqlServerScripts\**">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Content Include="PostgreScripts\**">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 
