--- a/Example.Postgre/Example.Postgre.csproj
+++ b/Example.Postgre/Example.Postgre.csproj
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
