--- a/Meadow.Microsoft.Extensions.DependencyInjection/Meadow.Microsoft.Extensions.DependencyInjection.csproj
+++ b/Meadow.Microsoft.Extensions.DependencyInjection/Meadow.Microsoft.Extensions.DependencyInjection.csproj
@@ -46,8 +46,11 @@
 
   <ItemGroup>
     <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.1" />
-    <PackageReference Include="Meadow.Framework" Version="1.2.4-b36" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-rc.1.23419.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Meadow\Meadow.csproj" />
   </ItemGroup>
   
   
