--- a/Meadow.Microsoft.Extensions.DependencyInjection/Meadow.Microsoft.Extensions.DependencyInjection.csproj
+++ b/Meadow.Microsoft.Extensions.DependencyInjection/Meadow.Microsoft.Extensions.DependencyInjection.csproj
@@ -46,7 +46,7 @@
 
   <ItemGroup>
     <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-rc.1.23419.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
