--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -7,7 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Acidmanic.MSLogging.LightWeight" Version="1.0.1" />
-        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b12" />
+        <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b14" />
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
@@ -54,6 +54,11 @@
       <None Update="TestCaseData\**">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="GenericRequests" />
     </ItemGroup>
 
 </Project>
