Update Meadow and SqLite to fix fullTree read issue (filtered sub-entity, hid top entity)

--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -25,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="bin\Debug\net7.0\Tdd51EntityFiltersDb2BeDeleted.db" />
         <Content Include="Scripts\**">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
