Update SqlServer for entity filters

--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -41,6 +41,9 @@
         <Content Include="PostgreScripts\**">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <None Update="MacroScripts\**">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 
