--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -11,8 +11,10 @@
         <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.5.22302.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="MySql.Data" Version="8.0.29" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+        <PackageReference Include="xunit" Version="2.9.0" />
     </ItemGroup>
 
     <ItemGroup>
