Separate Indexing and Transliteration services for test environments

--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -62,4 +62,10 @@
       </None>
     </ItemGroup>
 
+
+    <ItemGroup>
+      <Folder Include="Search\Contracts" />
+      <Folder Include="Search\Services" />
+    </ItemGroup>
+
 </Project>
