--- a/Meadow.MySql/Meadow.MySql.csproj
+++ b/Meadow.MySql/Meadow.MySql.csproj
@@ -7,6 +7,7 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <PropertyGroup>
