--- a/Meadow.SQLite/Meadow.SQLite.csproj
+++ b/Meadow.SQLite/Meadow.SQLite.csproj
@@ -8,6 +8,7 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 
