Pull out meadow wngin setup class

--- a/Meadow.Test.Functional/Meadow.Test.Functional.csproj
+++ b/Meadow.Test.Functional/Meadow.Test.Functional.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Examples.Common\Examples.Common.csproj" />
+        <ProjectReference Include="..\Meadow.Test.Shared\Meadow.Test.Shared.csproj" />
         <ProjectReference Include="..\Meadow\Meadow.csproj" />
         <ProjectReference Include="..\Meadow.Tools.Assistant\Meadow.Tools.Assistant.csproj" />
         <ProjectReference Include="..\Meadow.SQLite\Meadow.SQLite.csproj" />
