--- a/Meadow.Test.Unit/Meadow.Test.Unit.csproj
+++ b/Meadow.Test.Unit/Meadow.Test.Unit.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
-    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\Meadow.Postgre\Meadow.Postgre.csproj" />
     <ProjectReference Include="..\Meadow.SQLite\Meadow.SQLite.csproj" />
     <ProjectReference Include="..\Meadow.SqlServer\Meadow.SqlServer.csproj" />
+    <ProjectReference Include="..\Meadow.Test.Shared\Meadow.Test.Shared.csproj" />
     <ProjectReference Include="..\Meadow\Meadow.csproj" />
   </ItemGroup>
 
