--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -54,4 +54,8 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Sql\Extensions" />
+    </ItemGroup>
+
 </Project>
